<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.ngs</groupId>
    <artifactId>CertWizard</artifactId>
    <version>0.9.0</version>
    <dependencies>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.69</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.69</version>
        </dependency>
        <dependency>
            <groupId>org.restlet.jse</groupId>
            <artifactId>org.restlet</artifactId>
            <version>2.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.restlet.jse</groupId>
            <artifactId>org.restlet.ext.xml</artifactId>
            <version>2.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.restlet.jse</groupId>
            <artifactId>org.restlet.ext.httpclient</artifactId>
            <version>2.4.3</version>
        </dependency> 
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.14.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.14.1</version>
        </dependency>
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.7</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.vdurmont</groupId>
            <artifactId>semver4j</artifactId>
            <version>3.1.0</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>maven-restlet</id>
            <name>Public online Restlet repository</name>
            <url>https://maven.restlet.talend.com</url>
        </repository>
        <repository>
            <id>local-repo</id>
            <url>file://${basedir}/lib</url>
        </repository>
    </repositories>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
        <mainClass>uk.ngs.certwizard.gui.CertWizardMain</mainClass>
        <codeSignCert>C:\\Users\\fou43474\\OneDrive - Science and Technology Facilities Council\\Documents\\Certs\\ComodoCodeSign-all.p12</codeSignCert>
    </properties>

    <licenses>
        <license>
            <name>GPL-2.0</name>
            <url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
        </license>
    </licenses>

    <build>
        <finalName>${project.artifactId}</finalName>
    </build>
    
    <profiles>
        <profile>
            <id>jar-with-dependencies</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/java</directory>
                        <includes>
                            <include>**/*.gif</include>
                            <include>**/*.jpg</include>
                            <include>**/*.jpeg</include>
                            <include>**/*.png</include>
                            <include>**/*.properties</include>
                            <include>**/*.xml</include>
                        </includes>
                    </resource>
                    <resource>
                        <directory>src/main/resources</directory>
                    </resource>
                    <resource>
                        <directory>src/test/resources</directory>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <showDeprecation>true</showDeprecation>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>${mainClass}</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <keystore>${codeSignCert}</keystore>
                            <!--suppress UnresolvedMavenProperty -->
                            <storepass>${codesignpass}</storepass>
                            <!--suppress UnresolvedMavenProperty -->
                            <keypass>${codesignpass}</keypass>
                            <alias>1</alias>
                        </configuration>
                    </plugin>
                    
                    <plugin>
                        <groupId>io.github.fvarrui</groupId>
                        <artifactId>javapackager</artifactId>
                        <version>1.6.1</version>
                        <configuration>
                            <mainClass>${mainClass}</mainClass>
                            <bundleJre>true</bundleJre>
                            <version>0.9.0</version>
                            <displayName>CertWizard</displayName>
                            <organizationName>STFC</organizationName>
                            <organizationUrl>https://stfc.ukri.org</organizationUrl>
                            <organizationEmail>support@grid-support.ac.uk</organizationEmail>
                            <name>CertWizard</name>
                        </configuration>
                        <executions>
                            <execution>
                                <id>bundling-for-windows</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>package</goal>
                                </goals>
                                <configuration>
                                    <platform>windows</platform>
                                    <createZipball>true</createZipball>
                                    <winConfig>
                                        <generateSetup>true</generateSetup>
                                        <generateMsi>false</generateMsi>
                                        <generateMsm>false</generateMsm>
                                        <originalFilename>CertWizard.exe</originalFilename>
                                        <setupMode>askTheUser</setupMode>
                                        <createDesktopIconTask>true</createDesktopIconTask>
                                        <icoFile>src/main/resources/ngs-icon.ico</icoFile>
                                        <signing>
                                            <storetype>PKCS12</storetype>
                                            <keystore>${codeSignCert}</keystore>
                                            <!--suppress UnresolvedMavenProperty -->
                                            <storepass>${codesignpass}</storepass>
                                        </signing>
                                    </winConfig>
                                </configuration>
                            </execution>
                            <execution>
                                <id>bundling-for-mac</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>package</goal>
                                </goals>
                                <configuration>
                                    <platform>mac</platform>
                                    <createZipball>true</createZipball>
                                    <jdkPath>C:\jdk\OpenJDK11U-jdk_x64_mac_hotspot_11.0.9.1_1\jdk-11.0.9.1+1\Contents\Home</jdkPath>
                                    <macConfig>
                                        <icnsFile>src/main/resources/ngs-icon.icns</icnsFile>
                                    </macConfig>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>